# Copyright 2023 IBM All Rights Reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "tls_test_tools"
dynamic = ["version"]
description = "A set of tools to quickly write unit tests for (m)TLS communication"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "Gabe Goodhart", email = "gabe.l.hart@gmail.com" },
]
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "alchemy-logging>=1.0.3",
    "cryptography>=36.0.2",
]

[project.optional-dependencies]
test = [
    "Flask>=2.2.3,<4",
    "grpcio>=1.80.0,<2",
    "protobuf>=7,<8",
    "pytest>=6.2.5",
    "pytest-cov>=3.0.0",
    "requests>=2.28.2,<3",
]

[project.urls]
Homepage = "https://github.com/IBM/tls-test-tools"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.sdist]
include = ["tls_test_tools/", "LICENSE", "README.md"]

[tool.hatch.build.targets.wheel]
packages = ["tls_test_tools"]

[tool.pytest.ini_options]
addopts = [
    "--cov-config=.coveragerc",
    "--cov=tls_test_tools",
    "--cov-report=term",
    "--cov-report=html",
    "--cov-fail-under=100.0",
    "-W", "error",
]

[tool.coverage.run]
omit = ["tests/**"]

[tool.isort]
profile = "black"
from_first = true
import_heading_future = "Future"
import_heading_stdlib = "Standard"
import_heading_thirdparty = "Third Party"
import_heading_firstparty = "First Party"
import_heading_localfolder = "Local"
known_localfolder = ["tls_test_tools", "tests"]
